# DeepFoci

./: .gitignore
python/: copy_labels.py  copy_masks_to_local_data.py  final_analysis.ipynb  pyproject.toml  requirements.txt
python/final/: final_analysis.ipynb  labels_analysis.ipynb
python/foci_detection_training/: detection_evaluation.ipynb  evaluate_detections.py  example_prediction.ipynb  example_prediction.py
python/foci_detection_training/utils/: predict_by_parts.py
python/nuclei_segmentation_training/: segment_dataset.py  segmentation_evaluation.ipynb
python/nuclei_segmentation_training/utils/: organized.py
python/utils/: norm_percentile_nocrop.py
